[project]
name = "cryptohat"
version = "0.1.0"
description = "Add your description here"
dependencies = ["pycryptodome>=3.20.0", "click>=8.1.7", "pwntools>=4.12.0"]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"cryptohat" = "cryptohat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cryptohat"]
